crates/fakeable_impl/tests/snapshots/fakeable_impl__output_verification__fakeable_on_cfg_impl_gates_generated_mockall_module.snap
---
source: crates/fakeable_impl/src/../tests/output_verification.rs
expression: "testing_aids :: render_expansion(&result)"
---
#[cfg(feature = "enabled")]
impl __fakeable__MyService::MyService {
    pub fn value(&self) -> i32 {
        42
    }
}
#[cfg(feature = "enabled")]
impl MyService {
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn value(&self) -> i32 {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => __fakeable_real.value(),
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => __fakeable_fake.value(),
        }
    }
}
#[cfg(feature = "enabled")]
#[cfg(any(feature = "test-util", test))]
#[allow(clippy::all)]
#[allow(clippy::pedantic)]
#[allow(clippy::style)]
pub mod fakes {
    use super::*;
    ::mockall::mock! {
        #[derive(Debug)] pub MyService { pub fn value(& self) -> i32; }
    }
}
