crates/fakeable_impl/tests/snapshots/fakeable_impl__output_verification__fakeable_on_generic_impl_preserves_type_arguments.snap
---
source: crates/fakeable_impl/src/../tests/output_verification.rs
expression: "testing_aids :: render_expansion(&result)"
---
impl<T> __fakeable__MyService::MyService<T>
where
    T: Clone,
{
    pub fn new(value: T) -> Self {
        Self { value }
    }
    pub fn value(&self) -> &T {
        &self.value
    }
}
impl<T> MyService<T>
where
    T: Clone,
{
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn new(value: T) -> Self {
        Self {
            inner: __fakeable__MyService::Enum::Real(
                <__fakeable__MyService::MyService<T>>::new(value),
            ),
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn value(&self) -> &T {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => __fakeable_real.value(),
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => __fakeable_fake.value(),
        }
    }
}
