crates/fakeable_impl/tests/snapshots/fakeable_impl__output_verification__fakeable_on_generic_trait_impl_preserves_hidden_type_arguments.snap
---
source: crates/fakeable_impl/src/../tests/output_verification.rs
expression: "testing_aids :: render_expansion(&result)"
---
impl<T> Service for __fakeable__MyService::MyService<T>
where
    T: Clone,
{
    fn value(&self) -> i32 {
        42
    }
    fn duplicate(&self) -> Self {
        Self { value: self.value.clone() }
    }
}
impl<T> Service for MyService<T>
where
    T: Clone,
{
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    fn value(&self) -> i32 {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                <__fakeable__MyService::MyService<T> as Service>::value(__fakeable_real)
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => __fakeable_fake.value(),
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    fn duplicate(&self) -> Self {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                Self {
                    inner: __fakeable__MyService::Enum::Real(
                        <__fakeable__MyService::MyService<
                            T,
                        > as Service>::duplicate(__fakeable_real),
                    ),
                }
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                Self {
                    inner: __fakeable__MyService::Enum::Fake(__fakeable_fake.duplicate()),
                }
            }
        }
    }
}
