crates/fakeable_impl/tests/snapshots/fakeable_impl__output_verification__fakeable_on_impl_generates_expected_code.snap
---
source: crates/fakeable_impl/src/../tests/output_verification.rs
expression: "testing_aids :: render_expansion(&result)"
---
impl __fakeable__MyService::MyService {
    fn new(value: String, other_value: i32) -> Self {
        Self { value, other_value }
    }
    pub fn new2(value: String) -> Self {
        Self { value, other_value: 0 }
    }
    pub fn get_value(&self) -> &str {
        &self.value
    }
    pub fn get_other_value(&self) -> i32 {
        self.other_value
    }
    #[must_use]
    pub fn self_fn(self) -> Self {
        Self {
            value: self.value,
            other_value: self.other_value,
        }
    }
    pub fn self_fn_consuming(self) -> String {
        format!("Value: {}, Other: {}", self.value, self.other_value)
    }
    pub fn process(&self, prefix: impl AsRef<str>) -> String {
        format!("{} Value: {}, Other: {}", prefix.as_ref(), self.value, self.other_value)
    }
    pub fn marker<T: Default>(&self) -> u32 {
        42
    }
    pub fn lifetime<'a>(&self, value: &'a str) -> &'a str {
        value
    }
    pub fn const_marker<const N: usize>(&self) -> usize {
        N
    }
    pub fn generic_new<T: Default>() -> Self {
        Self {
            value: String::new(),
            other_value: 0,
        }
    }
    fn private_method_ignored(&self) {}
    pub(super) fn pub_private_method_accepted(&self) {}
}
impl MyService {
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn new2(value: String) -> Self {
        Self {
            inner: __fakeable__MyService::Enum::Real(
                <__fakeable__MyService::MyService>::new2(value),
            ),
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn get_value(&self) -> &str {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.get_value()
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.get_value()
            }
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn get_other_value(&self) -> i32 {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.get_other_value()
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.get_other_value()
            }
        }
    }
    #[must_use]
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn self_fn(self) -> Self {
        match self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                Self {
                    inner: __fakeable__MyService::Enum::Real(__fakeable_real.self_fn()),
                }
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                Self {
                    inner: __fakeable__MyService::Enum::Fake(__fakeable_fake.self_fn()),
                }
            }
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn self_fn_consuming(self) -> String {
        match self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.self_fn_consuming()
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.self_fn_consuming()
            }
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn process(&self, prefix: impl AsRef<str>) -> String {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.process(prefix)
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.process(prefix)
            }
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn marker<T: Default>(&self) -> u32 {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.marker::<T>()
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.marker::<T>()
            }
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn lifetime<'a>(&self, value: &'a str) -> &'a str {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.lifetime(value)
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.lifetime(value)
            }
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn const_marker<const N: usize>(&self) -> usize {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.const_marker::<N>()
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.const_marker::<N>()
            }
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn generic_new<T: Default>() -> Self {
        Self {
            inner: __fakeable__MyService::Enum::Real(
                <__fakeable__MyService::MyService>::generic_new::<T>(),
            ),
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub(super) fn pub_private_method_accepted(&self) {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.pub_private_method_accepted()
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.pub_private_method_accepted()
            }
        }
    }
}
