crates/fakeable_impl/tests/snapshots/fakeable_impl__output_verification__fakeable_on_impl_with_async_constructor_generates_expected_code.snap
---
source: crates/fakeable_impl/src/../tests/output_verification.rs
expression: "testing_aids :: render_expansion(&result)"
---
impl __fakeable__MyService::MyService {
    pub async fn new(value: String) -> Self {
        Self { value }
    }
}
impl MyService {
    #[allow(
        clippy::future_not_send,
        reason = "fake delegation preserves the future sendability of both real and fake implementations"
    )]
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub async fn new(value: String) -> Self {
        Self {
            inner: __fakeable__MyService::Enum::Real(
                <__fakeable__MyService::MyService>::new(value).await,
            ),
        }
    }
}
