crates/fakeable_impl/tests/snapshots/fakeable_impl__output_verification__fakeable_on_impl_with_mockall_and_async_unit_function_generates_expected_code.snap
---
source: crates/fakeable_impl/src/../tests/output_verification.rs
expression: "testing_aids :: render_expansion(&result)"
---
impl __fakeable__MyService::MyService {
    pub async fn async_method_unit(&self) {
        println!("async method unit");
    }
    pub async fn async_method_return_value(&self) -> Result<(), SomeError> {
        Ok(())
    }
}
impl MyService {
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub async fn async_method_unit(&self) {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.async_method_unit().await
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.async_method_unit().await
            }
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub async fn async_method_return_value(&self) -> Result<(), SomeError> {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.async_method_return_value().await
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.async_method_return_value().await
            }
        }
    }
}
#[cfg(any(feature = "test-util", test))]
#[allow(clippy::all)]
#[allow(clippy::pedantic)]
#[allow(clippy::style)]
pub mod fakes {
    use super::*;
    ::mockall::mock! {
        #[derive(Debug)] pub MyService { pub fn async_method_unit(& self) -> impl
        ::std::future::Future < Output = () > + Send; pub fn async_method_return_value(&
        self) -> impl ::std::future::Future < Output = Result < (), SomeError > > + Send;
        }
    }
}
