crates/fakeable_impl/tests/snapshots/fakeable_impl__output_verification__fakeable_on_impl_with_mockall_current_module_generates_expected_code.snap
---
source: crates/fakeable_impl/src/../tests/output_verification.rs
expression: "testing_aids :: render_expansion(&result)"
---
impl __fakeable__MyService::MyService {
    fn new(value: String, other_value: i32) -> Self {
        Self { value, other_value }
    }
    pub fn new2(value: String) -> Self {
        Self { value, other_value: 0 }
    }
    pub fn get_value(&self) -> &str {
        &self.value
    }
    pub fn get_other_value(&self) -> i32 {
        self.other_value
    }
}
impl MyService {
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn new2(value: String) -> Self {
        Self {
            inner: __fakeable__MyService::Enum::Real(
                <__fakeable__MyService::MyService>::new2(value),
            ),
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn get_value(&self) -> &str {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.get_value()
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.get_value()
            }
        }
    }
    #[allow(unused_mut)]
    #[allow(clippy::used_underscore_binding)]
    pub fn get_other_value(&self) -> i32 {
        match &self.inner {
            __fakeable__MyService::Enum::Real(__fakeable_real) => {
                __fakeable_real.get_other_value()
            }
            #[cfg(any(feature = "test-util", test))]
            __fakeable__MyService::Enum::Fake(__fakeable_fake) => {
                __fakeable_fake.get_other_value()
            }
        }
    }
}
#[cfg(any(feature = "test-util", test))]
::mockall::mock! {
    #[derive(Debug)] pub MyService { pub fn get_value(& self) -> & str; pub fn
    get_other_value(& self) -> i32; }
}
